# fmp-mcp

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
src/fmp_mcp/: __init__.py  __main__.py  server.py
src/fmp_mcp/tools/: __init__.py  company.py  crypto.py  financials.py  market.py
tests/: __init__.py  test_server.py
